# any-version

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent-docs-state.json  av-gui.csproj  check_log.txt  fix_env_registry.ps1  index.html  node-env-vars.md  package-lock.json  package.json  pnpm-lock.yaml  project,bak.json  projects.json  vite.config.ts  新建文本文档.txt
.catpaw/: preview.yml
ai-tools/: mcp-config.json  providers.json  skills-scan.json  terminals.json
backend/: cache_manager.go  config.go  diagnostics.go  env.go  file.go  hosts_manager.go  junction.go  main.go  mirror_manager.go  pkg_manager.go  port_manager.go  sdk.go  sdk_android_sdk.go  sdk_bun.go  sdk_flutter.go  sdk_go.go  sdk_gradle.go  sdk_java.go  sdk_maven.go  sdk_mongodb.go  sdk_node.go  sdk_php.go  sdk_pnpm.go  sdk_postgresql.go  sdk_pub.go  sdk_python.go  sdk_ruby.go  sdk_rust.go  sdk_services.go  sdk_vcpkg.go  sdk_yarn.go  service_manager.go
docs/: REFACTOR_PLAN.md  architecture.md  code_audit_summary.md  collab-tasks.md  echobird-tool-system-analysis.md  env_audit.md  env_classification_proposal.md  env_policy.md  env_tier_matrix.md  first_batch_matrix.md  phase1-plan.md  projects-json-schema.md  registry_data_plan.md  registry_schema.md  (+4 more)
src-tauri/: Cargo.toml  projects.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: ai.rs  ai_registry.rs  cache.rs  config.rs  conflict.rs  env.rs  hidden_cmd.rs  hosts.rs  http_server.rs  img_base64.rs  mirror.rs  mod.rs  pkg.rs  port.rs  sdk.rs  sdk_registry.rs  sdk_resolver.rs  service.rs  tool_version.rs  utils.rs
src-tauri/src/commands/ai/: cache.rs  collab.rs  config.rs  detect.rs  launch.rs  mcp.rs  mod.rs  models.rs  provider.rs  sessions.rs  skills.rs  terminal.rs  tool_paths.rs  tools.rs  usage.rs
src-tauri/src/commands/project/: commands.rs  mod.rs  registry.rs  scanner.rs  scoop_manifest.rs  types.rs  versions.rs
src-tauri/src/proxy/: google.rs  mod.rs  optimizers.rs  server.rs  sse.rs  transform.rs  types.rs
(+341 files in other folders)
