[package]
name = "any-version"
version = "3.0.3"
description = "Windows Multi-Language Dev Environment Version Manager"
authors = ["AnyVersion Team"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
serde_json = "1.0"
winreg = "0.52"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"
async-stream = "0.3"
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"
chrono = "0.4"
trash = "5.1"
sysinfo = "0.31"
futures-util = "0.3"
md5 = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
